@@ -120,6 +120,7 @@
 	* Changed jQuery UI color scheme
 	* Changed order of result relevance and content
 	* Changed order of function and results column, moving the functions to the left to act as navigation
+	* Fixed an issue with garbage collection causing pages falsely being removed from Index Queue and index
 
 2012-02-13  Ingo Renner  <ingo.renner@dkd.de>
 
